--- a/CSS/02.CSS3.md
+++ b/CSS/02.CSS3.md
@@ -1,41 +1,50 @@
 ## 1.过渡
 
--  众所周知，css效率极高，其变化的过程往往都是在一瞬间完成，速度极快。
-   CSS `transition` 提供了一种在更改CSS属性时控制动画速度的方法。 其可以让属性变化成为一个持续一段时间的过程，而不是立即生效的。比如，将一个元素的颜色从白色改为黑色，通常这个改变是立即生效的，使用 CSS `transitions` 后该元素的颜色将逐渐从白色变为黑色，按照一定的==曲线速率变化==。这个过程可以自定义
+众所周知，css效率极高，其变化的过程往往都是在一瞬间完成，速度极快。
+CSS `transition` 提供了一种在更改CSS属性时控制动画速度的方法。 其可以让属性变化成为一个持续一段时间的过程，而不是立即生效的。比如，将一个元素的颜色从白色改为黑色，通常这个改变是立即生效的，使用 CSS `transitions` 后该元素的颜色将逐渐从白色变为黑色，按照一定的==曲线速率变化==。
 
--  简写属性
-       `transition`是一个简写属性，用于 `transition-property`,`transition-duration`,`transition-timing-function`, 和`transition-delay`。 
-   CSS 过渡由简写属性 transition 定义是最好的方式，可以避免属性值列表长度不一，节省调试时间 
-
--  默认值：
-       `transition-delay: 0s`
-       `transition-duration: 0s`
-       `transition-property: all`
-       `transition-timing-function: ease`
+```css
+.box {
+  transition: transition-property | transition-duration | transition-timing-function | transition-delay;
+}
+```
 
 -  注意:
-       在`transition`属性中，各个值的书写顺序是很重要的：第一个可以解析为==时间==的值会被赋值给`transition-duration`，第二个可以解析为==时间==的值会被赋值给`transition-delay`
+   在`transition`属性中，各个值的书写顺序是很重要的：第一个可以解析为==时间==的值会被赋值给`transition-duration`，第二个可以解析为==时间==的值会被赋值给`transition-delay`
 
--  推荐简写顺序:
-       过渡时间  过渡样式  过渡形式  延迟时间 [过渡时间  过渡样式  过渡形式  延迟时间]
+> **注意：谁做过渡给谁加**
 
--  兼容性:
-       `transition` 可以不用厂商前缀，不过鉴于标准刚刚稳定，对于基于 `Webkit`的浏览器仍然需要厂商前缀。如果想兼容旧版本的浏览器那么也需要厂商前缀（例如Firefox 15 及之前版本, Opera 12 及之前版本)
+示例：
+
+```css
+div {
+        width: 100px;
+        height: 100px;
+        background-color: pink;
+        transition: width 0.5s;/*此时是div做动画，因此需要给div加过渡*/
+}
+div:hover {/*动画*/
+        width: 500px;
+}
+```
+
+此时的动画不是一瞬间完成的，而是慢慢的增加到500。
 
 ### 1.1`transition-property`
 
-- 指定应用过渡属性的名称
-- 默认值为 all，表示所有==可被动画的属性==都表现出过渡动画
+指定想要变化的css属性，比如宽度、高度、颜色、内外边距。如果想要所有的属性都应用过渡效果，则设置属性值为`all`。
 
-- 可以指定多个 `property` 
+```css
+.div{
+  transition-property: all(默认值) | none | 多个属性名称
+}
+```
 
-- 属性值：
-  none
-      没有过渡动画。
-  all
-      所有可被动画的属性都表现出过渡动画。
-  IDENT
-      属性名称 （可以指定多个）
+可能取值：
+
+- `all`:默认值，表示所有==可被动画的属性==都表现出过渡动画。
+- `none`:没有过渡动画。
+- 属性名:可以指定多个需要过渡的属性名
 
 示例：
 
@@ -45,88 +54,99 @@ transition-property: background,width,height;
 
 ### 1.2`transition-duration`
 
-- 属性以秒或毫秒为单位指定==过渡动画所需的时间==。
-- 默认值为 0s ，表示不出现过渡动画。
-
-  - 可以指定多个时长，每个时长会被应用到由 `transition-property` 指定的对应属性上。
-  - 如果指定的时长个数小于属性个数，那么时长列表会重复。
-  - 如果时长列表更长，那么该列表会被裁减。两种情况下，属性列表都保持不变。
-
-- 属性值:
-      以毫秒或秒为单位的数值
-      `<time>` 类型。**表示过渡属性从旧的值转变到新的值所需要的时间**。如果时长是 0s ，表示不会呈现过渡动画，属性会瞬间完成转变。不接受负值。==一定要加单位(不能写0 一定要写0s  1s,0s,1s)！==
+表示过渡属性从旧的值转变到新的值所需要的时间。
 
 ```css
-transition-duration: 1s,500ms,1s;
+.div{
+  transition-duration: 0s(默认值) | 数值(必须带单位)
+}
+```
+
+可能取值：
+
+- `0s`：默认值 ，表示不出现过渡动画，属性会瞬间完成转变。不接受负值。
+- 属性值:以毫秒或秒为单位的数值，必须带单位。
+
+> 多个值情况：
+
+- 可以指定多个时长，每个时长会被应用到由 `transition-property` 指定的对应属性上。
+- 如果指定的时长个数小于属性个数，那么时长列表会重复。
+- 如果时长列表更长，那么该列表会被裁减。两种情况下，属性列表都保持不变。
+
+```css
+.div{
+  transition-duration: 1s,500ms,1s;
+}
 ```
 
 ### 1.3`transition-timing-function`
 
-- CSS属性受到 `transition`的影响，会产生不断变化的中间值，而 `transition-timing-function` 属性用来描述这个中间值是怎样计算的。实质上，通过这个函数会建立一条加速度曲线，因此在整个`transition`变化过程中，变化速度可以不断改变
+过渡动画的运动曲线。
 
-- 默认值：`ease`
+```css
+.div{
+  transition-timing-function: ease(默认值) | linear | ease-in | ease-out | ease-in-out | cubic-bezier | step-start |step-end | steps;
+}
+```
 
-  - 你可以规定多个`timing function`,通过使用 `transition-property`属性，可以根据主列表(`transition property`的列表)给每个CSS属性应用相应的`timing function`.
-  - 如果`timing function`的个数比主列表中数量少，缺少的值被设置为初始值（ease） 。
-  - 如果`timing function`比主列表要多，`timing function`函数列表会被截断至合适的大小。这两种情况下声明的CSS属性都是有效的。
+可能取值：
 
-- 属性值：
-       
-
-      ```css
-      ease：（加速然后减速）默认值，ease函数等同于贝塞尔曲线(0.25, 0.1, 0.25, 1.0).
-      linear：（匀速），linear 函数等同于贝塞尔曲线(0.0, 0.0, 1.0, 1.0).
-      ease-in：(加速)，ease-in 函数等同于贝塞尔曲线(0.42, 0, 1.0, 1.0).
-      ease-out：（减速），ease-out 函数等同于贝塞尔曲线(0, 0, 0.58, 1.0).
-      ease-in-out：（加速然后减速），ease-in-out 函数等同于贝塞尔曲线(0.42, 0, 0.58, 1.0)
-      cubic-bezier： 贝塞尔曲线，x轴代表时间，y轴代表变化属性
-      step-start：等同于steps(1,start)
-      step-end：等同于steps(1,end)
-      steps(<integer>,[,[start|end]]?)
-        第一个参数：必须为正整数，指定函数的步数
-         第二个参数：指定每一步的值发生变化的时间点（默认值end）
-      ```
+- `ease`:默认值，加速然后减速。ease函数等同于贝塞尔曲线(0.25, 0.1, 0.25, 1.0)。
+- `linear`:匀速。linear 函数等同于贝塞尔曲线(0.0, 0.0, 1.0, 1.0)。
+- `ease-in`:加速。ease-in 函数等同于贝塞尔曲线(0.42, 0, 1.0, 1.0)。
+- `ease-out`:减速。ease-out 函数等同于贝塞尔曲线(0, 0, 0.58, 1.0)。
+- `ease-in-out`:加速然后减速。ease-in-out 函数等同于贝塞尔曲线(0.42, 0, 0.58, 1.0)
+- `cubic-bezier`:贝塞尔曲线，x轴代表时间，y轴代表变化属性。
+- `step-start`:等同于steps(1,start)。
+- `step-end`：等同于steps(1,end)。
+- `steps(步数，时间)`:第一个参数：必须为正整数，指定函数的步数,第二个参数：指定每一步的值发生变化的时间点（默认值end）。
 
 ### 1.4`transition-delay`
 
-- `transition-delay`属性规定了在过渡效果开始作用之前需要等待的时间。
-- 默认值：0s 
-- 你可以指定多个延迟时间，每个延迟将会分别作用于你所指定的相符合的css属性。
-  - 如果指定的时长个数小于属性个数，那么时长列表会重复。
+属性规定了在过渡效果开始作用之前需要等待的时间。表明动画过渡效果将在何时开始。
+
+```css
+.div{
+  transition-delay: 0s(默认值) | <数值>;
+}
+```
+
+你可以指定多个延迟时间，每个延迟将会分别作用于你所指定的相符合的css属性。
+
+- 如果指定的时长个数小于属性个数，那么时长列表会重复。
+
 - 如果时长列表更长，那么该列表会被裁减。两种情况下，属性列表都保持不变
-- 属性值:
-  - 值以秒（s）或毫秒（ms）为单位，表明动画过渡效果将在何时开始。
-  - 取值为正时会延迟一段时间来响应过渡效果；
-  - 取值为负时会导致过渡立即开始。
 
-> 当属性值的列表长度不一致时
+属性值:
+- 值以秒（s）或毫秒（ms）为单位，表明动画过渡效果将在何时开始。
+- 取值为正时会延迟一段时间来响应过渡效果；
+- 取值为负时会导致过渡立即开始。
 
-```
- transition-property: background,width,height;
+### 1.5简写属性
 
-​	transition-duration: 3s,2s;
+语法：
 
-​	transition-delay:3s,2s;
-
-​	transition-timing-function:linear;
-
-​	transition-property: background,width,height;
-
-​	transition-duration: 3s,2s,3s;
-
-​	transition-delay:3s,2s,3s;
-
-​	transition-timing-function:linear,ease,ease;
+```css
+.box {
+  transition: transition-property | transition-duration | transition-timing-function | transition-delay;
+}
 ```
 
-- 超出的情况下是会被全部截掉的
-- 不够的时候，关于时间的会重复列表，transition-timing-function的时候使用的是默认值ease
+注意：前面两个属性必填。后面两个属性可省略，省略时使用默认值。
 
-> 检测过渡是否完成
+示例：
 
-- 当过渡完成时触发一个事件，在符合标准的浏览器下，这个事件是 transitionend, 在 WebKit 下是 webkitTransitionEnd（每一个拥有过渡的属性在其完成过渡时都会触发一次transitionend事件）
+```css
+.box {
+  transition: all 0.5s ease 0s;
+}
+```
 
-- 在transition完成前设置 display: none，事件同样不会被触发
+### 1.6检测过渡是否完成
+
+当过渡完成时触发一个事件，在符合标准的浏览器下，这个事件是 transitionend, 在 WebKit 下是 webkitTransitionEnd（每一个拥有过渡的属性在其完成过渡时都会触发一次transitionend事件）
+
+在transition完成前设置 display: none，事件同样不会被触发
 
 ```html
 <script type="text/javascript">
@@ -150,7 +170,7 @@ transition-duration: 1s,500ms,1s;
 	</script>
 ```
 
-### 过度注意点
+### 1.7过度注意点
 
 > 1.
 
@@ -217,6 +237,42 @@ setTimeout(function(){
 //	}
 </script>
 ```
+
+### 1.8案列
+
+(1).进度条效果
+
+html:
+
+```html
+<div class="bar">
+    <div class="inner"></div>
+</div>
+```
+
+css:
+
+```css
+.bar {
+        width: 150px;
+        height: 15px;
+        border: 1px solid pink;
+        border-radius: 7px;
+  			/*子盒子超出部分进行隐藏*/
+        overflow: hidden;
+}
+.inner {
+        width: 50%;
+        height: 100%;
+        background: red;
+        transition: all 0.7s;
+}
+.bar:hover .inner {
+        width: 100%;
+}
+```
+
+
 
 ## 1.    2D变形
 
@@ -1445,342 +1501,6 @@ animation: name duration timing-function delay iteration-count direction fill-mo
 
 ```css
 animation: move 2s linear 1s infinite alternate forwards;
-```
-
-## 一、flex布局概念
-
-- CSS3弹性盒子(Flexible Box 或 Flexbox)，是一种用于在页面上布置元素的布局模式，==使得当页面布局必须适应不同的屏幕尺寸和不同的显示设备时，元素可预测地运行/列==。对于许多应用程序，弹性盒子模型提供了对块模型的改进，因为它不使用浮动，flex容器的边缘也不会与其内容的边缘折叠。
-- 弹性盒模型，分老版与新版
-  - 老版本的我们通常称之为box
-  - 新版本的我们通常称之为flex
-- 容器与项目
-  - 容器（`flex container`）就是包裹元素
-  - 项目（`flex item`）就是子元素
-- 主轴与侧轴
-      由`flex-direction/-webkit-box-orient`确定
-- 有了新版本后，为什么还需要老版本？（新版本比老版本要强大的很多）
-      ==原因：很多移动端浏览器内核版本都超低==
-
-> 注意：当容器设为 Flex 布局以后，子元素的`float`、`clear`和`vertical-align`属性将失效。
-
-![1565838404590](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565838404590.png)
-
-- 容器默认存在两根轴：水平的主轴（`main axis`）和垂直的交叉轴（`cross axis`）。主轴的开始位置（==与边框的交叉点==）叫做`main start`，结束位置叫做`main end`；交叉轴的开始位置叫做`cross start`，结束位置叫做`cross end`。
-
-- 项目默认沿主轴排列。单个项目占据的主轴空间叫做`main size`，占据的交叉轴空间叫做`cross size`。
-
-## 二、老版本Flex
-
-- 容器设置声明：`display:webkit-box;`
-
-### 2.1容器属性
-
-> 1. 容器的布局方向
-
-- `webkit-box-orient`属性本质上确定了主轴是哪一根
-      `horizontal`:x轴
-      `vertical`:y轴
-
-  ```css
-  webkit-box-orient: horizontal;
-  webkit-box-orient: vertical;
-  ```
-
-- **注意:项目永远是在主轴上排列的**
-
-> 2. 容器排列方向
-
-- `webkit-box-direction`属性本质上改变了主轴的方向
-
-  ```css
-  /*默认值：从左往右*/
-  webkit-box-direction: normal;
-  /*从右往左*/
-  webkit-box-direction: reverse;
-  ```
-
-- **注意:项目永远是沿着主轴的正方向排列的**
-
-> 3. 富裕空间的管理（项目对齐方向）
-
-与主轴是哪一根有关系，与方向无关
-
-1. `webkit-box-pack:start;`不会给项目分配空间，只是确定富裕空间的位置（主轴）
-
-- 富裕空间的管理（主轴）       
-
-  ```css
-  start     :富裕空间在右边（x）下边（y)
-  end       :富裕空间在左边（x）上边（y)
-  center    :富裕空间在两边
-  justify   :富裕空间在项目之间
-  ```
-
-2. `webkit-box-align:center;` 不会给项目区分配空间，只是确定富裕空间的位置 （侧轴）
-
-```css
-start  		:富裕空间在右边（x）下边（y)
-end    		:富裕空间在左边（x）上边（y)
-center 		:富裕空间在两边  
-```
-
-### 2.2项目
-
-> 弹性空间的管理
-
-- 弹性空间的管理：将富裕空间按比例分配到各个项目上
-- `webkit-box-flex: 1;`
-- 默认值:0   不可继承
-
-## 三、新版本布局
-
-- 容器设置声明：`display:flex;`
-
-### 3.1容器
-
-> 1. 容器的布局方向
-
-- `flex-direction`属性决定==主轴==以及==主轴的方向==（即项目的排列方向）。
-
-  ```css
-  row（默认值）	 	 :主轴为水平方向，起点在左端。
-  row-reverse	  	:主轴为水平方向，起点在右端。
-  column					:主轴为垂直方向，起点在上沿。
-  column-reverse	:主轴为垂直方向，起点在下沿。
-  ```
-
-- 示例：
-
-  - `flex-direction: column-reverse;`
-
-  - `flex-direction: column;`
-
-  - `flex-direction:row;`
-
-  - `flex-direction:row-reverse`
-
-
-> 2. 富裕空间的管理
-
-1. 确定主轴的排列方向
-
-   `justify-content: flex-start;`
-
-```css
-flex-start                    富裕空间在主轴的正方向
-flex-end                      富裕空间在主轴的反方向
-center                        富裕空间在主轴的两边
-space-between                 富裕空间在项目之间
-space-around(box 没有的)       富裕空间在项目两边
-```
-
-2. 更强大的富裕空间的管理（侧轴）
-   `align-items: stretch;`
-
-```css
-flex-start   					富裕空间在侧轴的正方向
-flex-end  	  				富裕空间在侧轴的反方向
-center  		 					富裕空间在侧轴的两边
-baseline(box 没有的)   按基线对齐
-stretch(box 没有的)    默认值，拉伸，等高布局（不能有高度）
-```
-
-### 3.2项目
-
-> 弹性空间的管理
-
-- 属性定义项目的放大比例，默认为`0`，即如果存在剩余空间，也不放大。
-
-- 如果所有项目的`flex-grow`属性都为1，则它们将等分剩余空间（如果有的话）。如果一个项目的`flex-grow`属性为2，其他项目都为1，则前者占据的剩余空间将比其他项多一倍。
-
-效果：
-
-![1565840878630](D:%5C%25E5%25BE%2585%25E6%2595%25B4%25E7%2590%2586%25E7%25AC%2594%25E8%25AE%25B0%5Ccss%5Cimg%5C1565840878630.png)
-
-- flex-grow： 
-  可用空间 = (容器大小 - 所有相邻项目flex-basis的总和)
-  可扩展空间 = (可用空间/所有相邻项目flex-grow的总和)
-  每项伸缩大小 = (伸缩基准值 + (可扩展空间 x flex-grow值))
-
-## 四、新版布局详解
-
-弹性容器属性
-    flex-direction
-    flex-wrap
-    flex-flow
-    justify-content
-    align-items
-    align-content
-弹性元素属性
-    order
-    align-self
-    flex-grow
-    flex-shrink
-    flex-basis
-
-### 4.1容器
-
-> 1. flex-wrap
-
-- `flex-wrap` 属性控制了容器为单行/列还是多行/列。并且定义了侧轴的方向，新行/列将沿侧轴方向堆砌。
-
-- 默认值：nowrap     不可继承
-
-- 值：
-  - `nowrap`   :默认值，不换行
-  - `wrap`       ：换行，第一行在上方
-  - `wrap-reverse`    ：换行，第一行在下方
-
-> 2. flex-flow
-
-- `flex-flow` 属性是设置`flex-direction`和`flex-wrap`的简写
-
-- 默认值：`row nowrap`    不可继承
-
-- 控制主轴和侧轴的位置以及方向
-
-> 3.  justify-content属性
-
-- `justify-content`属性定义了项目在主轴上的对齐方式。
-
-- 具体对齐方式与轴的方向有关。下面假设主轴为从左到右。
-
-- 值：
-
-  - `flex-start`（默认值）：左对齐
-  - `flex-end`：右对齐
-  - `center`： 居中
-  - `space-between`：两端对齐，项目之间的间隔都相等。
-  - `space-around`：每个项目两侧的间隔相等。所以，项目之间的间隔比项目与边框的间隔大一倍。
-
-  ```css
-  .box {
-    justify-content: flex-start | flex-end | center | space-between | space-around;
-  }
-  ```
-
-
-> 4. align-items属性
-
-- `align-items`属性定义项目在交叉轴上如何对齐。
-- 它可能取5个值。具体的对齐方式与交叉轴的方向有关，下面假设交叉轴从上到下。
-  - `flex-start`：交叉轴的起点对齐。
-  - `flex-end`：交叉轴的终点对齐。
-  - `center`：交叉轴的中点对齐。
-  - `baseline`: 项目的第一行文字的基线对齐。
-  - `stretch`（默认值）：如果项目未设置高度或设为auto，将占满整个容器的高度。
-
-> 5. align-content
-
-- `align-content` 属性定义弹性容器的侧轴方向上有额外空间时，如何排布每一行/列。当弹性容器只有一行/列时无作用
-- 默认值：stretch    不可继承  
-
-- 值：
-  `flex-start`
-      所有行/列从侧轴起点开始填充。第一行/列的侧轴起点边和容器的侧轴起点边对齐。
-      接下来的每一行/列紧跟前一行/列。
-  `flex-end`
-      所有弹性元素从侧轴末尾开始填充。最后一个弹性元素的侧轴终点和容器的侧轴终点对齐。
-      同时所有后续元素与前一个对齐。
-  `center`
-      所有行/列朝向容器的中心填充。每行/列互相紧挨，相对于容器居中对齐。
-      容器的侧轴起点边和第一行/列的距离相等于容器的侧轴终点边和最后一行/列的距离。
-  `space-between`
-      所有行/列在容器中平均分布。相邻两行/列间距相等。
-      容器的侧轴起点边和终点边分别与第一行/列和最后一行/列的边对齐。
-  `space-around`
-      所有行/列在容器中平均分布，相邻两行/列间距相等。
-      容器的侧轴起点边和终点边分别与第一行/列和最后一行/列的距离是相邻两行/列间距的一半。
-  `stretch`
-      拉伸所有行/列来填满剩余空间。剩余空间平均的分配给每一行/列   
-
-### 4.2项目
-
-> 1. order
-
-- `order` 属性定义项目的排列顺序。元素按照 `order` 属性的值的增序进行布局。拥有相同 order 属性值的元素按照它们在源代码中出现的顺序进行布局
-
-- 数值越小，排列越靠前，默认为0
-
-示例：
-
-```javascript
-#wrap > .item:nth-child(1){
-				order: 3;
-				align-self:flex-end;
-			}
-#wrap > .item:nth-child(2){
-				order: 1;
-			}
-```
-
-> 2. align-self
-
-- `align-sel`f 会对齐当前 flex 行中的 flex 元素，并覆盖 `align-items` 的值. 如果任何 flex 元素的侧轴方向 margin 值设置为 auto，则会忽略 align-self。
-
-- 默认值：auto    不可继承
-
-- 值：
-  `auto`
-      设置为父元素的 align-items 值，如果该元素没有父元素的话，就设置为 stretch。
-  `flex-start`
-      flex 元素会对齐到 cross-axis 的首端。
-  `flex-end`
-      flex 元素会对齐到 cross-axis 的尾端。
-  `center`
-      flex 元素会对齐到 cross-axis 的中间，如果该元素的 cross-size 的尺寸大于 flex 容器，
-      将在两个方向均等溢出。
-  `baseline`
-      所有的 flex 元素会沿着基线对齐，
-  `stretch`
-      flex 元素将会基于容器的宽和高，按照自身 margin box 的 cross-size 拉伸
-
-> 3. flex-shrink
-
-- `flex-grow` 属性定义弹性盒子项（flex item）的拉伸因子。
-
-- `flex-shrink` 属性定义了项目的缩小比例，默认为1，即如果空间不足，该项目将缩小。
-
-- 如果所有项目的`flex-shrink`属性都为1，当空间不足时，都将等比例缩小。如果一个项目的`flex-shrink`属性为0，其他项目都为1，则空间不足时，前者不缩小。
-
-- 负值对该属性无效。
-
-- `flex-shrink`：
-  每项flex收缩大小 = 伸展基准值 - (收缩比例 / 收缩比例总和 x 溢出的空间)-->并不是
-
-  1.计算收缩因子与基准值乘的总和  
-  2.计算收缩因数
-             收缩因数=（项目的收缩因子*项目基准值）/第一步计算总和    
-  3.移除空间的计算
-             移除空间= 项目收缩因数 x 负溢出的空间
-
-> 4. flex-basis
-
-- `flex-basis` 属性定义了在分配多余空间之前，项目占据的主轴空间（`main size`）。浏览器根据这个属性，计算主轴是否有多余空间。它的默认值为`auto`，即项目的本来大小。
-- 它可以设为跟`width`或`height`属性一样的值（比如350px），则项目将占据固定空间。
-
-- 注意：
-      在flex简写属性中 `flex-basis`的默认值为0
-- **当主轴为水平方向的时候，当设置了 flex-basis，项目的宽度设置值会失效，flex-basis 需要跟 flex-grow 和 flex-shrink 配合使用才能发挥效果。**
-
-> 5. flex
-
-- `flex` 是 `flex-grow`，`flex-shrink`，`flex-basis` 的简写属性
-
-- 默认值为`0 1 auto`。后两个属性可选
-
-- 该属性有两个快捷值：`auto` (`1 1 auto`) 和 none (`0 0 auto`)。
-
-  建议优先使用这个属性，而不是单独写三个分离的属性，因为浏览器会推算相关值。
-
-案例：淘宝导航
-
-```css
-/**html**/
-<div id="nav">
-<div>
-</div>
-/**css**/
 ```
 
 ## 五、响应式布局核心（媒体查询选择器）
