--- a/小程序/小程序配置.md
+++ b/小程序/小程序配置.md
@@ -497,35 +497,202 @@ Component({
 
 ### 6.8插槽slot的使用
 
+在组件中定义结构：
 
+```html
+<!--nav-bar.wxml-->
+<view class="left"><slot name="left"/></view>
+<view class="center"><slot name="center"/></view>
+<view class="right"><slot name="right"/></view>
+```
 
+还需要的组件中配置多插槽属性：
 
+```js
+//nav-bar.js
+Component({
+  options:{
+    multipleSlots:true
+  }
+})
+```
 
+在页面中进行使用：
 
+在页面的json文件中进行注册，页面中进行使用。
 
-
-
-
-
-
-
-
-
-
+```html
+<nav-bar>
+  <view slot="left">左侧</view>
+  <view slot="center">中间</view>
+  <view slot="right">右侧</view>
+</nav-bar>
+```
 
 ## 7.网络请求
 
+封装网络请求：
+
+在项目根目录下新建`service`文件夹，在此文件夹下新建`network.js`文件用于封装网络请求。
+
+```js
+export default function request(options){
+  return Promise((resolve,reject)=>{
+    wx.request({
+      url:options.url,
+      method:options.method || 'get',
+      data:options.data || {},
+      success:function(res){
+        resolve(res)
+      },
+      fail:function(err){
+        reject(err)
+      }
+    })
+  })
+}
+```
+
+其他页面导入使用：
+
+```js
+//home.js
+//只能使用相对路径进行导入
+import request from '../../service/network.js'
+
+//发送网络请求
+request({
+  url:''
+}).then(res=>{
+  console.log(res)
+}).catch(err=>{
+  console.log(err)
+})
+```
+
+## 8.小程序其他技术
+
+### 8.1弹窗
+
+四种弹窗：
+
+- Toast弹窗
+
+```js
+Page({
+  handleShowToast({
+    wx.showToast({
+    title:'标题'
+  })
+  })
+})
+```
 
 
 
+### 8.2分享
 
-8.小程序其他技术
+右上角菜单分享：
 
-8.1弹窗
+```js
+//home.js
+Page({
+  onShareAppMessage:function(options){
+    return {
+      title:'转发标题',
+      path:'转发页面路径',//默认是当前页面
+      imageUrl:'图片地址：本地图片/网络图片'
+    }
+  }
+})
+```
 
-8.2分享
+点击按钮实现分享：
 
-8.3登录
+```html
+<!--home.wxml-->
+<button size="mini" open-type="share">
+  分享
+</button>
+```
 
-8.4页面跳转
+### 8.3登录流程
 
+在`app.js`文件中进行编写登录操作：
+
+```js
+//app.js
+const TOKEN = 'token'
+
+App({
+  // 对象: 小程序关闭掉
+  globalData: {
+    token: ''
+  },
+  onLaunch: function () {
+    // 1.先从缓冲中取出token
+    const token = wx.getStorageSync(TOKEN)
+
+    // 2.判断token是否有值
+    if (token && token.length !== 0) { // 已经有token,验证token是否过期
+      this.check_token(token) // 验证token是否过期
+    } else { // 没有token, 进行登录操作
+      this.login()
+    }
+  },
+  check_token(token) {
+    console.log('执行了验证token操作')
+    wx.request({
+      url: 'http://123.207.32.32:3000/auth',
+      method: 'post',
+      header: {
+        token
+      },
+      success: (res) => {
+        if (!res.data.errCode) {
+          console.log('token有效')
+          this.globalData.token = token;
+        } else {
+          this.login()
+        }
+      },
+      fail: function(err) {
+        console.log(err)
+      }
+    })
+  },
+  login() {
+    console.log('执行了登录操作')
+    wx.login({
+      // code只有5分钟的有效期
+      success: (res) => {
+        // 1.获取code
+        const code = res.code;
+
+        // 2.将code发送给我们的服务器
+        wx.request({
+          url: 'http://123.207.32.32:3000/login',
+          method: 'post',
+          data: {
+            code
+          },
+          success: (res) => {
+            // 1.取出token
+            const token = res.data.token;
+
+            // 2.将token保存在globalData中
+            this.globalData.token = token;
+
+            // 3.进行本地存储
+            wx.setStorageSync(TOKEN, token)
+          }
+        })
+      }
+    })
+  }
+})
+```
+
+### 8.4页面跳转
+
+navigator组件进行页面跳转操作。
