--- a/小程序/小程序配置.md
+++ b/小程序/小程序配置.md
@@ -2,6 +2,377 @@
 
 ### 1.1全局配置app.json
 
+## 2.小程序基本语法
+
+### 2.1逻辑层
+
+
+
+### 2.2视图层
+
+#### 2.2.1WXML
+
+- 数据绑定
+
+```html
+<!--wxml-->
+<view> {{message}} </view>
+```
+
+```js
+// page.js
+Page({
+  data: {
+    message: 'Hello MINA!'
+  }
+})
+```
+
+- 列表渲染
+
+```html
+<!--wxml-->
+<view wx:for="{{array}}"> {{item}}--{{index}} </view>
+```
+
+```js
+// page.js
+Page({
+  data: {
+    array: [1, 2, 3, 4, 5]
+  }
+})
+```
+
+- 条件渲染
+
+```html
+<!--wxml-->
+<view wx:if="{{view == 'WEBVIEW'}}"> WEBVIEW </view>
+<view wx:elif="{{view == 'APP'}}"> APP </view>
+<view wx:else="{{view == 'MINA'}}"> MINA </view>
+```
+
+```js
+// page.js
+Page({
+  data: {
+    view: 'MINA'
+  }
+})
+```
+
+- 模板
+
+```html
+<!--wxml-->
+<template name="staffName">
+  <view>
+    FirstName: {{firstName}}, LastName: {{lastName}}
+  </view>
+</template>
+
+<template is="staffName" data="{{...staffA}}"></template>
+<template is="staffName" data="{{...staffB}}"></template>
+<template is="staffName" data="{{...staffC}}"></template>
+```
+
+```js
+// page.js
+Page({
+  data: {
+    staffA: {firstName: 'Hulk', lastName: 'Hu'},
+    staffB: {firstName: 'Shang', lastName: 'You'},
+    staffC: {firstName: 'Gideon', lastName: 'Lin'}
+  }
+})
+```
+
+#### 2.2.2wxss
+
+- 尺寸单位
+
+rpx（responsive pixel）: 可以根据屏幕宽度进行自适应。规定屏幕宽为750rpx。如在 iPhone6 上，屏幕宽度为375px，共有750个物理像素，则750rpx = 375px = 750物理像素，1rpx = 0.5px = 1物理像素。
+
+- 样式导入
+
+使用`@import`语句可以导入外联样式表，`@import`后跟需要导入的外联样式表的相对路径，用`;`表示语句结束。
+
+```less
+/** common.wxss **/
+.small-p {
+  padding:5px;
+}
+```
+
+```less
+/** app.wxss **/
+@import "common.wxss";
+.middle-p {
+  padding:15px;
+}
+```
+
+- 内联样式
+
+框架组件上支持使用 style、class 属性来控制组件的样式。
+
+style：静态的样式统一写到 class 中。style 接收动态的样式，在运行时会进行解析，请尽量避免将静态的样式写进 style 中，以免影响渲染速度。
+
+```html
+<view style="color:{{color}};" />
+```
+
+class：用于指定样式规则，其属性值是样式规则中类选择器名(样式类名)的集合，样式类名不需要带上`.`，样式类名之间用空格分隔。
+
+```html
+<view class="normal_view" />
+```
+
+- 选择器
+
+目前支持的选择器有：类选择器、id选择器、元素选择器、选择器分组、`::after`、`::before`
+
+- 全局样式与局部样式
+
+定义在 app.wxss 中的样式为全局样式，作用于每一个页面。在 page 的 wxss 文件中定义的样式为局部样式，只作用在对应的页面，并会覆盖 app.wxss 中相同的选择器。
+
+## 3.事件
+
+### 3.1使用方式
+
+- 在组件中绑定一个事件处理函数。
+
+如`bindtap`，当用户点击该组件的时候会在该页面对应的Page中找到相应的事件处理函数。
+
+```html
+<view id="tapTest" data-hi="Weixin" bindtap="tapName"> Click me! </view>
+```
+
+- 在相应的Page定义中写上相应的事件处理函数，参数是event。
+
+```js
+Page({
+  tapName: function(event) {
+    console.log(event)
+  }
+})
+```
+
+### 3.2使用WXS函数响应事件
+
+WXS函数接受2个参数，第一个是event，在原有的event的基础上加了`event.instance`对象，第二个参数是`ownerInstance`，和`event.instance`一样是一个`ComponentDescriptor`对象。具体使用如下：
+
+- 在组件中绑定和注册事件处理的WXS函数。
+
+```html
+<wxs module="wxs" src="./test.wxs"></wxs>
+<view id="tapTest" data-hi="Weixin" bindtap="{{wxs.tapName}}"> Click me! </view>
+**注：绑定的WXS函数必须用{{}}括起来**
+```
+
+- test.wxs文件实现tapName函数
+
+```text
+function tapName(event, ownerInstance) {
+  console.log('tap Weixin', JSON.stringify(event))
+}
+module.exports = {
+  tapName: tapName
+}
+```
+
+`ownerInstance`包含了一些方法，可以设置组件的样式和class，具体包含的方法以及为什么要用WXS函数响应事件。
+
+### 3.3普通事件绑定
+
+事件绑定的写法类似于组件的属性，如：
+
+```html
+<view bindtap="handleTap">
+    Click here!
+</view>
+```
+
+如果用户点击这个 view ，则页面的 `handleTap` 会被调用。
+
+事件绑定函数可以是一个数据绑定，如：
+
+```html
+<view bindtap="{{ handlerName }}">
+    Click here!
+</view>
+```
+
+此时，页面的 `this.data.handlerName` 必须是一个字符串，指定事件处理函数名；如果它是个空字符串，则这个绑定会失效（可以利用这个特性来暂时禁用一些事件）。
+
+自基础库版本 [1.5.0](https://developers.weixin.qq.com/miniprogram/dev/framework/compatibility.html) 起，在大多数组件和自定义组件中， `bind` 后可以紧跟一个冒号，其含义不变，如 `bind:tap` 。基础库版本 [2.8.1](https://developers.weixin.qq.com/miniprogram/dev/framework/compatibility.html) 起，在所有组件中开始提供这个支持。
+
+### 3.4绑定并阻止事件冒泡
+
+除 `bind` 外，也可以用 `catch` 来绑定事件。与 `bind` 不同， `catch` 会阻止事件向上冒泡。
+
+除 `bind` 外，也可以用 `catch` 来绑定事件。与 `bind` 不同， `catch` 会阻止事件向上冒泡。
+
+例如在下边这个例子中，点击 inner view 会先后调用`handleTap3`和`handleTap2`(因为tap事件会冒泡到 middle view，而 middle view 阻止了 tap 事件冒泡，不再向父节点传递)，点击 middle view 会触发`handleTap2`，点击 outer view 会触发`handleTap1`。
+
+```html
+<view id="outer" bindtap="handleTap1">
+  outer view
+  <view id="middle" catchtap="handleTap2">
+    middle view
+    <view id="inner" bindtap="handleTap3">
+      inner view
+    </view>
+  </view>
+</view>
+```
+
+### 3.5 互斥事件绑定
+
+自基础库版本 [2.8.2](https://developers.weixin.qq.com/miniprogram/dev/framework/compatibility.html) 起，除 `bind` 和 `catch` 外，还可以使用 `mut-bind` 来绑定事件。一个 `mut-bind` 触发后，如果事件冒泡到其他节点上，其他节点上的 `mut-bind` 绑定函数不会被触发，但 `bind` 绑定函数和 `catch` 绑定函数依旧会被触发。
+
+换而言之，所有 `mut-bind` 是“互斥”的，只会有其中一个绑定函数被触发。同时，它完全不影响 `bind` 和 `catch` 的绑定效果。
+
+例如在下边这个例子中，点击 inner view 会先后调用 `handleTap3` 和 `handleTap2` ，点击 middle view 会调用 `handleTap2` 和 `handleTap1` 。
+
+```html
+<view id="outer" mut-bind:tap="handleTap1">
+  outer view
+  <view id="middle" bindtap="handleTap2">
+    middle view
+    <view id="inner" mut-bind:tap="handleTap3">
+      inner view
+    </view>
+  </view>
+</view>
+```
+
+### 3.6事件的捕获阶段
+
+自基础库版本 [1.5.0](https://developers.weixin.qq.com/miniprogram/dev/framework/compatibility.html) 起，触摸类事件支持捕获阶段。捕获阶段位于冒泡阶段之前，且在捕获阶段中，事件到达节点的顺序与冒泡阶段恰好相反。需要在捕获阶段监听事件时，可以采用`capture-bind`、`capture-catch`关键字，后者将中断捕获阶段和取消冒泡阶段。
+
+在下面的代码中，点击 inner view 会先后调用`handleTap2`、`handleTap4`、`handleTap3`、`handleTap1`。
+
+```html
+<view id="outer" bind:touchstart="handleTap1" capture-bind:touchstart="handleTap2">
+  outer view
+  <view id="inner" bind:touchstart="handleTap3" capture-bind:touchstart="handleTap4">
+    inner view
+  </view>
+</view>
+```
+
+如果将上面代码中的第一个`capture-bind`改为`capture-catch`，将只触发`handleTap2`。
+
+```html
+<view id="outer" bind:touchstart="handleTap1" capture-catch:touchstart="handleTap2">
+  outer view
+  <view id="inner" bind:touchstart="handleTap3" capture-bind:touchstart="handleTap4">
+    inner view
+  </view>
+</view>
+```
+
+### 3.7事件对象
+
+## 4.双向绑定
+
+在 WXML 中，普通的属性的绑定是单向的。例如：
+
+```html
+<input value="{{value}}" />
+```
+
+如果使用 `this.setData({ value: 'leaf' })` 来更新 `value` ，`this.data.value` 和输入框的中显示的值都会被更新为 `leaf` ；但如果用户修改了输入框里的值，却不会同时改变 `this.data.value` 。
+
+如果需要在用户输入的同时改变 `this.data.value` ，需要借助简易双向绑定机制。此时，可以在对应项目之前加入 `model:` 前缀：
+
+```html
+<input model:value="{{value}}" />
+```
+
+这样，如果输入框的值被改变了， `this.data.value` 也会同时改变。同时， WXML 中所有绑定了 `value` 的位置也会被一同更新
+
+### 4.1 在自定义组件中传递双向绑定
+
+双向绑定同样可以使用在自定义组件上。如下的自定义组件：
+
+```js
+// custom-component.js
+Component({
+  properties: {
+    myValue: String
+  }
+})
+<!-- custom-component.wxml -->
+<input model:value="{{myValue}}" />
+```
+
+这个自定义组件将自身的 `myValue` 属性双向绑定到了组件内输入框的 `value` 属性上。这样，如果页面这样使用这个组件：
+
+```html
+<custom-component model:my-value="{{pageValue}}" />
+```
+
+当输入框的值变更时，自定义组件的 `myValue` 属性会同时变更，这样，页面的 `this.data.pageValue` 也会同时变更，页面 WXML 中所有绑定了 `pageValue` 的位置也会被一同更新。
+
+### 4.2在自定义组件中触发双向绑定更新
+
+自定义组件还可以自己触发双向绑定更新，做法就是：使用 setData 设置自身的属性。例如：
+
+```js
+// custom-component.js
+Component({
+  properties: {
+    myValue: String
+  },
+  methods: {
+    update: function() {
+      // 更新 myValue
+      this.setData({
+        myValue: 'leaf'
+      })
+    }
+  }
+})
+```
+
+如果页面这样使用这个组件：
+
+```html
+<custom-component model:my-value="{{pageValue}}" />
+```
+
+当组件使用 `setData` 更新 `myValue` 时，页面的 `this.data.pageValue` 也会同时变更，页面 WXML 中所有绑定了 `pageValue` 的位置也会被一同更新。
+
+## 5.获取界面上的节点信息
+
+### 5.1WXML节点信息
+
+[节点信息查询 API](https://developers.weixin.qq.com/miniprogram/dev/api/wxml/wx.createSelectorQuery.html) 可以用于获取节点属性、样式、在界面上的位置等信息。
+
+最常见的用法是使用这个接口来查询某个节点的当前位置，以及界面的滚动位置。
+
+**示例代码：**
+
+```js
+const query = wx.createSelectorQuery()
+query.select('#the-id').boundingClientRect(function(res){
+  res.top // #the-id 节点的上边界坐标（相对于显示区域）
+})
+query.selectViewport().scrollOffset(function(res){
+  res.scrollTop // 显示区域的竖直滚动位置
+})
+query.exec()
+```
+
+上述示例中， `#the-id` 是一个节点选择器，与 CSS 的选择器相近但略有区别，请参见 [SelectorQuery.select](https://developers.weixin.qq.com/miniprogram/dev/api/wxml/SelectorQuery.select.html) 的相关说明。
+
+在自定义组件或包含自定义组件的页面中，推荐使用 `this.createSelectorQuery` 来代替 [wx.createSelectorQuery](https://developers.weixin.qq.com/miniprogram/dev/api/wxml/wx.createSelectorQuery.html) ，这样可以确保在正确的范围内选择节点。
+
+
+
 
 
 ## 2.小程序生命周期
