--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -225,7 +225,7 @@ var obj = new Object();
 obj.valueOf() === obj // true
 ```
 
-`valueOf`方法的主要用途是，JavaScript 自动类型转换时会默认调用这个方法。
+`valueOf`方法的主要用途是：JavaScript 自动类型转换时会默认调用这个方法。
 
 ```js
 var obj = new Object();
