--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -924,7 +924,7 @@ var obj = {
 
 上面的写法与定义属性描述对象是等价的，而且使用更广泛。
 
-注意，取值函数`get`不能接受参数，存值函数`set`只能接受一个参数（即属性的值）。
+注意:取值函数`get`不能接受参数，存值函数`set`只能接受一个参数（即属性的值）。
 
 存取器往往用于，属性的值依赖对象内部数据的场合。
 
