--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -1660,7 +1660,7 @@ a // [1, 2]
 // ]
 ```
 
-注意，自定义的排序函数应该返回数值，否则不同的浏览器可能有不同的实现，不能保证结果都一致。
+> 注意，自定义的排序函数应该返回数值，否则不同的浏览器可能有不同的实现，不能保证结果都一致。
 
 ```js
 // bad
@@ -2487,7 +2487,7 @@ Number.prototype.iterate = function () {
 
 上面代码在`Number`对象的原型上部署了`iterate`方法，将一个数值自动遍历为一个数组。
 
-注意，数值的自定义方法，只能定义在它的原型对象`Number.prototype`上面，数值本身是无法自定义属性的。
+> 注意，数值的自定义方法，只能定义在它的原型对象`Number.prototype`上面，数值本身是无法自定义属性的。
 
 ```js
 var n = 1;
@@ -2814,7 +2814,7 @@ one + two + three // "33"
 'cat, bat, sat, fat'.match('xt') // null
 ```
 
-返回的数组还有`index`属性和`input`属性，分别表示匹配字符串开始的位置js和原始字符串。
+返回的数组还有`index`属性和`input`属性，分别表示匹配字符串开始的位置和原始字符串。
 
 ```js
 var matches = 'cat, bat, sat, fat'.match('at');
@@ -3258,7 +3258,7 @@ new Date('15, February, 2013')
 
 上面多种日期字符串的写法，返回的都是同一个时间。
 
-第三，参数为年、月、日等多个整数时，年和月是不能省略的，其他参数都可以省略的。也就是说，这时至少需要两个参数，因为如果只使用“年”这一个参数，`Date`会将其解释为毫秒数。
+第三点，参数为年、月、日等多个整数时，年和月是不能省略的，其他参数都可以省略的。也就是说，这时至少需要两个参数，因为如果只使用“年”这一个参数，`Date`会将其解释为毫秒数。
 
 ```js
 new Date(2013)
