--- a/javascript/基础/06.面向对象编程.md
+++ b/javascript/基础/06.面向对象编程.md
@@ -255,7 +255,7 @@ person2.greeting() // Hi! I'm 张三.
 
 前一章已经提到，`this`可以用在构造函数之中，表示实例对象。除此之外，`this`还可以用在别的场合。但不管是什么场合，`this`都有一个共同点：==它总是返回一个对象==。
 
-> 简单说，`this`就是属性或方法“当前”所在的对象。
+> ==**简单说，`this`就是属性或方法“当前”所在的对象。**==
 
 ```js
 this.property
@@ -1348,7 +1348,7 @@ p.hasOwnProperty('constructor') // false
 
 上面代码中，`p`是构造函数`P`的实例对象，但是`p`自身没有`constructor`属性，该属性其实是读取原型链上面的`P.prototype.constructor`属性。
 
-`constructor`属性的作用是，可以得知某个实例对象，到底是哪一个构造函数产生的。
+> `constructor`属性的作用是，可以得知某个实例对象，到底是哪一个构造函数产生的。
 
 ```js
 function F() {};
@@ -1492,7 +1492,7 @@ y instanceof Object // true
 
 上面代码中，`instanceof`运算符判断，变量`x`是数组，变量`y`是对象。
 
-注意，`instanceof`运算符只能用于对象，不适用原始类型的值。
+> 注意，`instanceof`运算符只能用于对象，不适用原始类型的值。
 
 ```js
 var s = 'hello';
