--- a/javascript/ES6/01.let 和 const 命令.md
+++ b/javascript/ES6/01.let 和 const 命令.md
@@ -104,7 +104,7 @@ if (true) {
 
 上面代码中，存在全局变量`tmp`，但是块级作用域内`let`又声明了一个局部变量`tmp`，导致后者绑定这个块级作用域，所以在`let`声明变量前，对`tmp`赋值会报错。
 
-**ES6 明确规定，如果区块中存在`let`和`const`命令，这个区块对这些命令声明的变量，从一开始就形成了封闭作用域。凡是在声明之前就使用这些变量，就会报错**。
+> **ES6 明确规定，如果区块中存在`let`和`const`命令，这个区块对这些命令声明的变量，从一开始就形成了封闭作用域。凡是在声明之前就使用这些变量，就会报错**。
 
 总之，在代码块内，使用`let`命令声明变量之前，该变量都是不可用的。这在语法上，称为“暂时性死区”（temporal dead zone，简称 TDZ）。
 
@@ -275,7 +275,7 @@ ES6 允许块级作用域的任意嵌套。
 
 上面代码使用了一个五层的块级作用域，每一层都是一个单独的作用域。第四层作用域无法读取第五层作用域的内部变量。
 
-内层作用域可以定义外层作用域的同名变量。
+> **内层作用域可以定义外层作用域的同名变量**
 
 ```js
 {{{{
@@ -304,7 +304,7 @@ ES6 允许块级作用域的任意嵌套。
 
 函数能不能在块级作用域之中声明？这是一个相当令人混淆的问题。
 
-ES5 规定，函数只能在顶层作用域和函数作用域之中声明，不能在块级作用域声明。
+> **ES5 规定，函数只能在顶层作用域和函数作用域之中声明，不能在块级作用域声明。**
 
 ```js
 // 情况一
@@ -461,7 +461,7 @@ PI = 3;
 
 上面代码表明改变常量的值会报错。
 
-`const`声明的变量不得改变值，这意味着，`const`一旦声明变量，就必须立即初始化，不能留到以后赋值。
+> `const`声明的变量不得改变值，这意味着，`const`一旦声明变量，就必须立即初始化，不能留到以后赋值。
 
 ```js
 const foo;
