--- a/javascript/基础/05.标准库.md
+++ b/javascript/基础/05.标准库.md
@@ -33,7 +33,7 @@ obj.print() // obj
 
 上面代码中，`Object.prototype`定义了一个`print`方法，然后生成一个`Object`的实例`obj`。`obj`直接继承了`Object.prototype`的属性和方法，可以直接使用`obj.print`调用`print`方法。也就是说，`obj`对象的`print`方法实质上就是调用`Object.prototype.print`方法。
 
-> 凡是定义在`Object.prototype`对象上面的属性和方法，将被所有实例对象共享。
+> **凡是定义在`Object.prototype`对象上面的属性和方法，将被所有实例对象共享。**
 
 以下先介绍`Object`作为函数的用法，然后再介绍`Object`对象的原生方法，分成对象自身的方法（又称为“静态方法”）和实例方法两部分。
 
